<resources>
    <!--  app meta data  -->

    <string name="app_name">Treasure Hunt</string>

    <!--  gcp api  -->

    <string name="googleMapsApiKey">AIzaSyABV9NsQ4qqvUE14j3LAsl2cZRb-4xpbbc</string>

    <!--  log in / sign up  -->

    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="signUpSwitchText">I would like to receive email promotions, reminders, etc</string>
    <string name="logIn">Log In</string>
    <string name="logOut">Log Out</string>
    <string name="pw">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="forgotPw">Forgotten your password? Click Here.</string>

    <!--    networking -->

    <string name="host">https://treasurehunt.ddns.net:4433</string>

    <!--   home screen -->

    <string name="feedback">Feedback</string>
    <string name="findChallenge">Find Challenge</string>
    <string name="groups">Groups</string>
    <string name="groupName">Group Name</string>
    <string name="groupDesc">Group Description (Optional)</string>
    <string name="myChallenge">My Challenges</string>
    <string name="uploadPfp">Upload Profile Picture</string>
    <string name="treasureChestCD">Treasure Chest</string>
    <string name="races">Races</string>

    <!--   challenges -->

    <string name="createChallenge">Create Challenge</string>
    <string name="deleteChallenge">Delete Challenge</string>
    <string name="addGroups">Add Groups</string>
    <string name="editChallenge">Edit Challenge</string>
    <string name="noChallenges">You have no challenges!</string>
    <string name="puzzle">Puzzle</string>
    <string name="name">Name</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="searchHint">Search Challenges</string>
    <string-array name="exerciseTypes">
        <item>Biking</item>
        <item>Walking</item>
        <item>Running</item>
    </string-array>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="create">Create</string>

    <!--   races -->

    <string name="createRace">Create Race</string>
    <string name="raceTitle">Race Title</string>
    <string name="enter">Enter</string>
    <string name="schedule">Schedule</string>
    <string name="scheduleRace">Schedule Race</string>

    <!--   groups -->

    <string name="createGroup">Create Group</string>
    <string name="joinGroup">Join Group</string>
    <string name="myGroups">My Groups</string>
    <string name="joinCode">Join Code</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="addMember">Add Member</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="allowMemberCode">Allow members to invite other players</string>
    <string name="minimumPoints">Minimum points to join the group</string>
    <string name="discard">Discard Changes</string>
    <string name="save">Save Changes</string>
    <string name="groupChat">Chat</string>
    <string name="messageHint">Enter Message</string>
    <string name="invite">Invite</string>
    <string name="invitations">Invitations</string>
    <string name="from">From:</string>
    <string name="group">Group:</string>
    <string name="info">Info</string>

    <!--   leaderboard -->

    <string name="points">Points</string>
    <string name="status">Status</string>
    <string name="rank">Rank</string>


    <!--   misc -->

    <string name="surveyLink">https://docs.google.com/forms/d/e/1FAIpQLSecPydSBK134zt2Q2tXNKCxIAVKZwvYk37UH-8-F7GLqHYENw/viewform</string>
    <string name="title_activity_testactivity">Map</string>
    <string name="search">Search</string>
    <string name="find_race">Find Race</string>
    <string name="upcoming_races">Upcoming Races</string>
    <string name="click_here">Click Here</string>
    <string name="creator_name">creator name</string>
    <string name="group_name">group name</string>
    <string name="race_title">race title</string>

<!--    g sign in-->

    <string name="g_client">http://730998725642-ckq8b3obokmq10d0uko2agjo46124kbo.apps.googleusercontent.com</string>
</resources>