<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_leave_group"
        android:title="@string/leaveGroup" />

    <item
        android:id="@+id/menu_delete_group"
        android:title="@string/deleteGroup"
        android:visible="false"/>

    <item
        android:id="@+id/menu_group_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_group_members"
        android:title="@string/people"
        android:icon="@drawable/ic_baseline_groups_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_group_chat"
        android:title="@string/groupChat"
        android:icon="@drawable/ic_baseline_chat_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_group_info"
        android:title="@string/info"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="always" />

</menu>