<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/su_switch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:checked="true"
        android:text="@string/signUpSwitchText"
        app:layout_constraintBottom_toTopOf="@+id/su_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_pw" />

    <Button
        android:id="@+id/su_cancel"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="233dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_sign_up" />

    <Button
        android:id="@+id/su_sign_up"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/signUp"
        app:layout_constraintBottom_toTopOf="@+id/su_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_switch" />

    <EditText
        android:id="@+id/su_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/su_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/su_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/su_switch"
        app:layout_constraintStart_toStartOf="@+id/su_email"
        app:layout_constraintTop_toBottomOf="@+id/su_email" />

    <EditText
        android:id="@+id/su_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/su_pw"
        app:layout_constraintEnd_toEndOf="@+id/su_username"
        app:layout_constraintTop_toBottomOf="@+id/su_username" />

</androidx.constraintlayout.widget.ConstraintLayout>