<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateChallengeActivity">

    <fragment
        android:id="@+id/cc_map"
        android:layout_width="match_parent"
        android:layout_height="426dp"
        tools:layout_editor_absoluteY="305dp" />

    <Button
        android:id="@+id/cc_create"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/create"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="667dp" />

    <EditText
        android:id="@+id/cc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="227dp" />

    <Spinner
        android:id="@+id/cc_diff"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/difficulties"
        android:spinnerMode="dropdown"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="219dp" />

    <EditText
        android:id="@+id/cc_puzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/puzzle"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="137dp" />

</androidx.constraintlayout.widget.ConstraintLayout>